Merged revisions 75984 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

................
  r75984 | mark.dickinson | 2009-10-31 10:18:44 +0000 (Sat, 31 Oct 2009) | 12 lines

  Merged revisions 75982 via svnmerge from
  svn+ssh://pythondev@svn.python.org/python/trunk

  ........
    r75982 | mark.dickinson | 2009-10-31 10:11:28 +0000 (Sat, 31 Oct 2009) | 5 lines

    Issue #6603: Fix --with-tsc build failures on x86-64 that resulted
    from a gcc inline assembler peculiarity. (gcc's "A" constraint
    apparently means 'rax or rdx' in 64-bit mode, not edx:eax
    or rdx:rax as one might expect.)
  ........
................